fix: fixed hidden scrollbar and animate fn

--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@ body {
   background: linear-gradient(to bottom right, #f9c4d2, #a0d8ef);
   font-family: "Outfit", sans-serif;
   font-weight: 500;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .num-balls-input-div {
